<resources>
    <string name="app_name">GoDutch</string>
    <string name="top_title">AA费用小助手</string>
    <string name="bottom_box_welcome">欢迎您使用AA费用小助手</string>
    <string name="appGridTextPayoutAdd">记录消费</string>
    <string name="appGridTextPayoutManage">查询消费</string>
    <string name="appGridTextStaticsManage">统计管理</string>
    <string name="appGridTextAccountBookManage">账本管理</string>
    <string name="appGridTextCategoryManage">类别管理</string>
    <string name="ActivityTitleCategory">类别管理(%s)</string>
    <string name="TextViewTextCategoryName">类别名称</string>
    <string name="TextViewTextParentID">所属分类</string>

    <string name="ActivityTitleAccountBook">账本管理</string>
    <string name="ActivityTitleCategoryAddOrEdit">%s类别</string>
    <string name="ActivityTitleUser">人员管理(%s)</string>
    <string name="ActivityTitlePayoutAddOrEdit">%s消费</string>
    <string name="ActivityTitlePayout">查询消费-%1$s(%2$s)</string>
    <string name="ActivityTitleStatics">统计管理-%1$s</string>
    <string name="ActivityCategoryTotal">统计类别</string>
    <string name="appGridTextUserManage">人员管理</string>
    <string name="UserAddEditHint">人员名称</string>
    <string name="AccountBookAddEditHint">账本名称</string>
    <string name="CheckDataChineseEnglish">%s必须时中文或者字母</string>
    <string name="CheckDataUserExist">该用户名已存在，请更换用户名！</string>
    <string name="CheckDataAccountBookExist">该账本已存在，请更换账本名！</string>
    <string name="TipsAddSuccess">保存成功</string>
    <string name="TipsAddFail">保存失败</string>
    <string name="TipsDeleteSuccess">删除成功</string>
    <string name="TipsDeleteFail">删除失败</string>
    <string name="TitleTextNew">新建</string>
    <string name="TitleTextEdit">修改</string>
    <string name="ButtonDialogSave">保存</string>
    <string name="ButtonDialogCancel">取消</string>
    <string name="DialogTitleUser">%s人员</string>
    <string name="MenuTextEdit">修改</string>
    <string name="MenuTextDelete">删除</string>
    <string name="DialogMessageUserDelete">你确定要删除%s用户吗？</string>
    <string name="DialogMessagePayoutDelete">你确定要删除%s消费记录吗？</string>
    <string name="DialogMessageCategoryDelete">你确定要删除%s类别吗？</string>
    <string name="DialogTitleDelete">删除提示</string>
    <string name="ButtonTextYes">是</string>
    <string name="ButtonTextNo">否</string>
    <string name="DialogTitleAccountBook">%s账本</string>
    <string name="CheckBookIsDefault">设置为默认账本</string>
    <string name="PayoutTypeFlag">消费</string>
    <string name="TextOfChildCategoryCount">%s个子类</string>
    <string name="PayoutAccountButtonText">选择账本</string>
    <string name="PayoutButtonText">输入金额</string>
    <string name="PayoutEditTextHint">请输入金额</string>
    <string name="PayoutCategoryEditTextHint">请输入或选择消费类别</string>
    <string name="PayoutCategoryButtonText">选择类别</string>
    <string name="PayoutDateButtonText">选择日期</string>
    <string name="PayoutAccountFormButtonText">计算方式</string>
    <string name="PayoutUserButtonText">选择消费人</string>
    <string name="PayoutUserEditTextHint">请选择消费人，第一位为付款人</string>
    <string name="PayoutNote">请输入备注</string>
</resources>
